--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <body id="grid-container">
+    <body id="grid">
        <div class="item1">1</div>
        <div class="item2">2</div>
       <div class="item3">3</div>
